--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 .header {
@@ -26,10 +26,22 @@ a {
     justify-content: center;
     align-items: center;
     flex: 1;
+    padding: 48px;
 }
 
 .main-image {
     flex: 1 0 50%;
+    max-width: 500px;
+    margin: 24px;
+}
+
+.text-container {
+    max-width: 500px;
+    margin: 24px;
+}
+
+.text-container > * {
+    margin: 8px;
 }
 
 .information-container  {
@@ -38,6 +50,11 @@ a {
     justify-content: center;
     align-items: center;
     flex: 1;
+    padding: 16px;
+}
+
+.information {
+    padding: 8px;
 }
 
 .img-group {
@@ -49,18 +66,25 @@ a {
     margin: 16px;
 }
 
+.img-info .text, .img-info img { 
+    margin: 16px;
+}
+
 .quote-container {
     display: flex;
     justify-content: center;
-    padding: 40px;
     flex: 1;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 100;
+    color: #1F2937
 }
 
 .quote-text {
     display: flex;
     flex-direction: column;
     width: 600px;
-    margin: 40px;
+    margin: 100px;
 }
 
 .quote-name {
@@ -69,18 +93,83 @@ a {
 
 .sign-banner {
     display: flex;
-    padding: 50px;
-    justify-content: center;
+    padding: 25px 100px;
+    justify-content: space-between;
     align-items: center;
     flex: 1;
+    margin: 100px 200px;
+    border-radius: 15px;
 }
 
-.sign-banner .text-container, .button {
-    padding: 35px;
+.sign-banner .text-container {
+    margin: 0px;
 }
 
 .footer {
     display: flex;
     justify-content: center;
     align-content: center;
+    padding: 15px;
+    color: #f9faf8;
+}
+
+/* Color */
+
+.header, .footer, .title-container {
+    background-color: #1F2937;
+}
+
+.title {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #f9faf8;
+}   
+
+.subtext, a {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.logo {
+    font-size: 24px;
+    color: #f9faf8;
+    font-weight: bold;
+    padding: 12px;
+}
+
+button {
+    font-size: 18px;
+    color: #e5e7eb;
+    font-weight: bold;
+    padding: 8px 16px;
+    background-color: #3882f6;
+    border-radius: 15px;
+    border-width: 0px;
+}
+
+.sign-banner {
+    background-color: #3882f6;
+    color: #f9faf8;
+}
+
+.sign-banner button {
+    border-width: 2px;
+    border-color: #f9faf8;
+    border-style: solid;
+}
+
+.quote-container {
+    background-color: #e5e7eb;
+}
+
+.quote-name {
+    font-size: 24px;
+    font-weight: 600;
+    margin: 18px;
+}
+
+.information {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
 }
