--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 20px 150px;
 }
 
 ul {
@@ -23,21 +24,19 @@ a {
 
 .title-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex: 1;
-    padding: 48px;
+    padding: 20px 150px 40px;
 }
 
 .main-image {
     flex: 1 0 50%;
     max-width: 500px;
-    margin: 24px;
 }
 
 .text-container {
     max-width: 500px;
-    margin: 24px;
 }
 
 .text-container > * {
@@ -50,11 +49,11 @@ a {
     justify-content: center;
     align-items: center;
     flex: 1;
-    padding: 16px;
+    padding: 0px 150px;
 }
 
 .information {
-    padding: 8px;
+    padding: 40px;
 }
 
 .img-group {
@@ -68,6 +67,7 @@ a {
 
 .img-info .text, .img-info img { 
     margin: 16px;
+    text-align: center;
 }
 
 .quote-container {
@@ -77,7 +77,7 @@ a {
     font-size: 36px;
     font-style: italic;
     font-weight: 100;
-    color: #1F2937
+    color: #1F2937;
 }
 
 .quote-text {
@@ -156,6 +156,12 @@ button {
     border-width: 2px;
     border-color: #f9faf8;
     border-style: solid;
+    flex-shrink: 0;
+}
+
+.sign-banner .bolder {
+    font-weight: bolder;
+    font-size: 18px;
 }
 
 .quote-container {
@@ -172,4 +178,12 @@ button {
     font-size: 36px;
     font-weight: bolder;
     color: #1F2937;
+}
+
+/* Images */
+
+.img-group img {
+    height: 200px;
+    width: 200px;
+    margin: 0px;
 }
